tests/baselines/reference/pathMappingBasedModuleResolution_withExtension_failedLookup.errors.txt
/tsconfig.json(3,9): error TS5101: Option 'baseUrl' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
  Visit https://aka.ms/ts6 for migration information.
/a.ts(1,21): error TS2307: Cannot find module 'foo' or its corresponding type declarations.


==== /tsconfig.json (1 errors) ====
    {
        "compilerOptions": {
            "baseUrl": ".",
            ~~~~~~~~~
!!! error TS5101: Option 'baseUrl' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
!!! error TS5101:   Visit https://aka.ms/ts6 for migration information.
            "paths": {
                "foo": ["foo/foo.ts"]
            }
        }
    }
    
==== /a.ts (1 errors) ====
    import { foo } from "foo";
                        ~~~~~
!!! error TS2307: Cannot find module 'foo' or its corresponding type declarations.
    